# jenkins-job-builder-xvnc

./: .gitignore  .travis.yml  Notes.md  README.rst  setup.cfg
sample/: jenkins.ini  sample-job.yml
tools/: release.bash
xvnc_build_wrapper/: __init__.py
