[metadata]
name = jenkins-job-builder-xvnc
author = Thomas Heilbronner
author_email = thomas.heilbronner@gmail.com
summary = Enable xvnc for job execution.
description-file = README.rst
license = Apache License, Version 2.0
home-page = https://github.com/signed/jenkins-job-builder-xvnc
version = 0.0.1
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    xvnc_build_wrapper

[pbr]
warnerrors = True

[entry_points]
jenkins_jobs.wrappers =
    xvnc=xvnc_build_wrapper:xvnc